fixes for stretchy image, plot headers

--- a/inst/www/metaboshiny.css
+++ b/inst/www/metaboshiny.css
@@ -331,11 +331,10 @@
 }
 /* -------------------- EXPERIMENTATION -------------------- */
 
-img {
+.shiny-image-output img {
   max-width: 100%;
   max-height: 120px;
 }
-
 
 .row {
   margin-right:-7px;
